2017-01-09  Danilo Chang

    * Add isSeekable command
    * Add getPosition and setPosition command
    * Re-design command
      ** INCOMPATIBLE CHANGE **

    * Add tkvlc::setTime command

2017-01-08  Danilo Chang

    * Add tkvlc::duration and tkvlc::getTime command
    * Add tkvlc::version command
    * Add tkvlc::setVolume and tkvlc::getVolume command

2017-01-05  Danilo Chang

    * Bump version to 0.2
    * Fix build fail on Windows platform
    * Update README.md

2017-01-04  Danilo Chang

    * Implement commands
    * configure.ac: add libvlc library link 
    * Update package name

2017-01-03  Danilo Chang

    * Dump sample extension
